--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.4",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/localize": "~13.2.0",
+    "@angular/material": "^13.2.4",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "angular-material": "^1.2.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
+    "jquery": "^3.6.0",
+    "material": "^0.4.3",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
