--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "angular-material": "^1.2.4",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "chart.js": "^3.7.0",
     "jquery": "^3.6.0",
     "material": "^0.4.3",
