--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.8.1",
     "chart.js": "^3.7.0",
     "jquery": "^3.6.0",
+    "leaflet": "^1.8.0",
     "material": "^0.4.3",
     "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
@@ -38,6 +39,7 @@
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
